test/error/0002-redefinition1.c
/*
PATTERN: redefinition
PATTERN: c:7:
*/

int x;
int x;

